# polimi-parallel-comp-life-without-death

./: CMakeLists.txt  LwD_HatsuOpenMP_Miku.ipynb  Parallel_giulio.cpp  README.md  compile_and_log.sh  parallel_alessia.cpp
output/: 100x180.txt  1040x720.txt  1920x1080.txt  500x700.txt
src/: Parallel_giulio.cpp  base_implementation.cpp  our_implementation.cpp  our_implementation_v2.cpp  visualize.py
